[Tarea1] Add: Contendio Multimedia

--- a/Tarea1/intereses.html
+++ b/Tarea1/intereses.html
@@ -25,7 +25,7 @@
     <p>Pues me gustaria viajar a muchos paise de europa, pero a donde mas quisiera viajar seria a japon con amigos que compartan el mismo
         deseo que yo alguien que disfrute de la cultura japonesa,  mas que todo me gustaria ir por los bellos lugares que este tiene,
         desde lugares muy desarrolados tecnologicamente hasta regiones con mucha cultara y bellos paisajes, me encataria ir en primavera
-        ya que es cuando florecen los arboles de cerezos dandoles belleza y color a sus calles.
+        ya que es cuando florecen los arboles de cerezos dandoles belleza y color a sus calles. <a href="https://www.youtube.com/watch?v=FzuM9Z5VQJ8&t=135s" target="_blank">JAPAN</a>
     </p> 
     <center>  
     <video src="jap.mp4" controls preload="auto" width="720" height="400" > </video> 
@@ -36,7 +36,8 @@
         Tambien otra opcion de viaje es Tomorrowland en Belgica, ya que amo la musica electronica, desde muy peque es sid fanatico de esta
         mis primeros Dj's fuero Armin, Tiesto y Dash Berlin, ahora mi dj favorito es Martin Garrix Seguido de AVicii lastmosamente ya nos
         dejo que en pa descanse, ir a Tomorrowland a de ser algo increible para experimentar la diversidad cultural de muchos paisajes 
-        y convivir entre ellos. En este año hubo una edicion en francia en una montañas nevadas lo cual estuvo genial.
+        y convivir entre ellos. En este año hubo una edicion en francia en una montañas nevadas lo cual estuvo genial. 
+        <a href="https://www.youtube.com/watch?v=Q0nhJ3_fpIc" target="_blank">Tomorrowland</a>
     </p> 
     
     <center>  
