[Tarea1] Fix: Datos personales

--- a/Tarea1/pag.html
+++ b/Tarea1/pag.html
@@ -29,6 +29,12 @@
                     <p>No posea ni una experiencia laboral hasta el momento, pero les ayudo a mis papas en un local que tienen en el 
                         mercado.
                     </p>
+                    <p>
+                        Soy de el departamento de la paz, en un municipio llamado santiago nonualco debido a esto viajo todos los dias 
+                        y tengo levantarme lo mas temprano a las 4 para poder irme en microbus universitario, aveces hay trafico y 
+                        lo mas tarde que llego es a las 8:00 am y es un viaje de 1 hora o 1 hora y 30 minutos y llego tipo 8 de la noche a casa cuando salgo 
+                        de clases a las 5:30 pm.
+                    </p>
                 <hr>
                 <p>00104518</p>
                 <p>Segundo año de ingenieria informatica</p>
