[Tarea1] Add: Pagina hobbies

--- a/Tarea1/intereses.html
+++ b/Tarea1/intereses.html
@@ -21,6 +21,14 @@
                         
                     </ul>
                 </nav>
+
+    <h2>HOBBIES</h2> 
+    <p>
+        En mis tiempos libre me dedico a jugar league of legend, escuchar musicca y dibujar, les ayudo a mis padres en su trabajos 
+        y cuando puedo salgo con mis amigos, me gusta mas que odo dibujar estilo manga me env=cantan las hitorietas japonesas por sus increibles dibujos,
+        pero cuando me aburro de dibujar me pongo a jugar en linea con mis amigos y compañeros de carrera.
+    </p>           
+    
     <h2>Intereses</h2>       
     <p>Pues me gustaria viajar a muchos paise de europa, pero a donde mas quisiera viajar seria a japon con amigos que compartan el mismo
         deseo que yo alguien que disfrute de la cultura japonesa,  mas que todo me gustaria ir por los bellos lugares que este tiene,
