--- a/Tarea1/menu.html
+++ b/Tarea1/menu.html
@@ -13,10 +13,10 @@
        </header>
        <nav>
 		<ul>
-			<li><a href="file:///C:/Users/ronal/OneDrive/Escritorio/about_me/datos.html">datos personales</a></li>
-			<li><a href="file:///C:/Users/ronal/OneDrive/Escritorio/about_me/tarea1.html">menu</a></li>
-			<li><a href="file:///C:/Users/ronal/OneDrive/Escritorio/about_me/intereses.html">Perfil</a></li>
-			<li><a href="file:///C:/Users/ronal/OneDrive/Escritorio/about_me/pie.html">pie de pagina</a></li>
+			<li><a href="http://127.0.0.1:5500/Tarea1/pag.html">datos personales</a></li>
+			<li><a href="http://127.0.0.1:5500/Tarea1/menu.html">menu</a></li>
+			<li><a href="http://127.0.0.1:5500/Tarea1/intereses.html">Perfil</a></li>
+			<li><a href="http://127.0.0.1:5500/Tarea1/pie.html">pie de pagina</a></li>
 		</ul>
     </nav>
     <center>
