--- a/Laboratorios/Laboratorio5/Labo5.html
+++ b/Laboratorios/Laboratorio5/Labo5.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <script src="Eje1.js"></script>
+    <script src="Eje4.js"></script>
+   <!-- <script src="Eje1.js"></script>
     <script src="Eje2.js"></script>
     <script src="Eje3.js"></script>
     <script src="Eje4.js"></script>
@@ -14,7 +15,7 @@
     <script src="Eje7.js"></script>
     <script src="Eje8.js"></script>
     <script src="Eje9.js"></script>
-    <script src="Eje10.js"></script>
+    <script src="Eje10.js"></script>-->
 
     <title>Document</title>
 </head>
